fixed mobile login popup white text color, alignment, and size

--- a/Tinville/static/css/main.css
+++ b/Tinville/static/css/main.css
@@ -1381,16 +1381,12 @@ textarea
 
     nav a
     {
-        display         : block;
         text-decoration : none;
-        font-size       : 16px;
-        color           : #FFFFFF;
     }
 
     nav a:hover
     {
         color : #CCCCCC;
-
     }
 
     #mobileMenu
